# scar-minecraft

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pyproject.toml
controller/: actions.js  attach-adapter.js  auto-server.js  bedrock-combat.js  block-cache.js  bridge.js  categories.js  combat-utils.js  input-monitor.js  java-block-cache.js  java-combat.js  java-relay.js  keyboard-fallback.js  lan-automation.js  lan-discovery.js  launcher.js  macro-actions.js  main.js  mouse-delta.js  relay.js  state.js  stealth.js  utils.js  version-compat.js
controller/native/: input-monitor  input-monitor.c  mouse-delta  mouse-delta.c
gui/: entitlements.mac.plist  main.js  preload.js
gui/renderer/: app.js  (+2 more)
tests/: diag-spectator.js  golden_state.json  test_2d_env.py  test_adaptive_threshold.py  test_affect.py  test_attention.py  test_cognitive_fixes.py  test_complexity.py  test_compositional.py  test_consolidation.py  test_contextual_env.py  test_data_pipeline.py  test_episodic.py  test_evolution.py  test_factored_actions.py  test_integration.py  test_internal_society.py  test_introspection.py  test_live_bridge.py  test_live_cli.py  test_live_encoder.py  test_live_insight.py  test_live_monitor.py  test_live_stream.py  test_live_watcher.py  test_memory.py  test_minecraft_encoder.py  test_minecraft_env.py  test_neural_darwinism.py  test_neural_policy.py  test_opponent_tracker.py  test_options.py  test_patch_env.py  test_predictive_hierarchy.py  test_primitives.py  test_protocol.js  test_recursive_cognition.py  test_salience.py  test_sequence.py  test_shared_env.py  (+9 more)
(+65 files in other folders)
